--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,6 +1,9 @@
 <section>
   <mat-toolbar fxLayout fxLayoutAlign="space-between">
     <div class="toolbar-left" fxLayout fxLayoutAlign="center center">
+      <!-- <div class="version">
+        V19
+      </div> -->
       <mat-icon fxHide.gt-sm class="menu-icon" (click)="onOpenSidenav()">menu</mat-icon>
     </div>
 
