--- a/src/app/navigation/header/header.component.scss
+++ b/src/app/navigation/header/header.component.scss
@@ -8,6 +8,9 @@ mat-toolbar {
       color: var(--text-color-bright-orange);
       margin-right: 10px;
     }
+    .version {
+      color: white;
+    }
   }
   .toolbar-right {
     .list-container {
