--- a/src/app/new-exhibitions/show-exposition/show-exposition.component.scss
+++ b/src/app/new-exhibitions/show-exposition/show-exposition.component.scss
@@ -1,15 +1,19 @@
 .filler {
+    background-color: aqua;
     height: 56px;
     @media (min-width: 600px) {
         height: 64px;
     }
+    // height: 2px;
 }
+
 .main-container {
     // background-color: black;
+    // height: calc(100vh - 56px); 
+    // height: 500px;
     mat-drawer-container {
         // height: calc(1.3 * 100vh);
-        height: 100vh;
-        
+
         mat-drawer {
             // border: 1px solid var(--text-color-bright-orange);
             max-width: 500px;
@@ -23,9 +27,9 @@
             }
             .drawer-title {
                 display: inline-block;
-                padding: .3rem;
+                padding: 0.3rem;
                 border: 1px solid var(--text-color-bright-orange);
-                border-radius: .3rem;
+                border-radius: 0.3rem;
                 color: var(--text-color-bright-orange);
                 font-size: 1.3rem;
             }
@@ -44,7 +48,7 @@
             }
             .emailAddress {
                 color: var(--text-color-bright-orange);
-                margin-bottom: .3rem;
+                margin-bottom: 0.3rem;
             }
             .link {
                 // border: 3px solid pink;
@@ -58,17 +62,79 @@
             }
         }
         mat-drawer-content {
+            // border: 5px solid red;
             background-color: var(--header-blue);
-            height: 100vh;
+            height: 100%;
+            position: relative;
+
+            
+
+            .modal {
+                // border: 3px solid yellow;
+                height: 100vh;
+                width: 100%;
+                position: absolute;
+                opacity: 1;
+                z-index: 100;
+                
+
+                .child-modal {
+                    width: 33%;
+                    height: 100vh;
+                    display: inline-block;
+                    background-color: transparent;
+                }
+                .left-modal {
+                    // border: 2px solid green;
+                    // background-color: green;
+                    // width: 20px;
+                    .previous-icon {
+                        // border: 2px solid white;
+                        font-size: 50px;
+                        font-weight: bold;
+                        position: fixed;
+                        top: 50vh;
+                        // max-width: 20px !important;
+                        left: 10vw;
+                    }
+                }
+                .center-modal {
+                    // outline: 2px solid yellow;
+                    // background-color: yellow;
+                    text-align: center;
+                    .launch-icon {
+                        width: calc(100vw / 3);
+                        // border: 2px solid white;
+                        font-size: 50px;
+                        font-weight: bold;
+                        position: fixed;
+                        top: 50vh;
+                        opacity: 1;  
+                    }
+                }
+                .right-modal {
+                    // outline: 2px solid pink;
+                    // background-color: pink;
+
+                    .next-icon {
+                        // border: 2px solid red;
+                        font-size: 50px;
+                        font-weight: bold;
+                        position: fixed;
+                        top: 50vh;
+                        right: 10vw;
+                    }
+                }
+            }
 
             hr {
                 border-color: var(--text-color-orange);
-                padding:0;
-                margin:0;
+                padding: 0;
+                margin: 0;
             }
             .header {
-                padding: .5rem;
-                .title_info {
+                padding: 0.5rem;
+                .title_order-number_info {
                     .title {
                         background-color: var(--header-blue);
                         border: 2px solid var(--text-color-orange);
@@ -76,11 +142,19 @@
                         padding: 0.3rem 0.5rem;
                         border-radius: 0.3rem;
                         font-size: 1.5rem;
+                        @media (max-width: 480px) {
+                            font-size: 1rem;
+                          }
+                    }
+                    .order-number {
+                        color: var(--text-color-bright-orange);
+                        padding: .3rem;
                     }
                     .info-button {
                         background-color: var(--text-color-orange);
                         color: var(--header-blue);
                         margin-right: 0.3rem;
+                        z-index: 100;
                         .info {
                             font-size: 1.5rem;
                         }
@@ -96,9 +170,10 @@
                     }
 
                     .orderNumber {
-                        // border: 1px solid red;
+                        
                         color: var(--text-color-bright-orange);
                         margin: auto;
+                        
                     }
                     .next {
                         background-color: var(--text-color-orange);
@@ -108,21 +183,31 @@
                     }
                 }
             }
+            .spinner-navigation {
+                .spinner {
+                    margin-top: 3rem;
+                    margin-bottom: 3rem;
+                }
+                .navigation {
+                    width: 100%;
+                    font-size: 50px;
+                    // border: 2px solid var(--text-color-bright-orange);
+                    color: var(--text-color-bright-orange);
+                }
+            }
             .images {
-                
                 // width: 100%;
                 .figure {
                     .image {
-                        
-                        max-height: calc(100vh - 215px);
+                        max-height: calc(100vh - 175px);
                         max-width: 100vw;
                     }
                     figcaption {
-                        padding-right: .3rem;
+                        padding-right: 0.3rem;
                         // border: 1px solid white;
                         background-color: var(--header-blue);
                         // position:fixed;
-                        right:0;
+                        right: 0;
                         color: var(--text-color-bright-orange);
                     }
                 }
@@ -135,4 +220,27 @@
     }
 }
 
+.animated {
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    
+}
+
+ @-webkit-keyframes fadeOut {
+    0% {opacity: 1;}
+    100% {opacity: 0;}
+ }
+ 
+ @keyframes fadeOut {
+     0% {opacity: 1;}
+    100% {opacity: 0;}
+}
+
+.fadeOut {
+     animation-fill-mode: forwards;
+    -webkit-animation-name: fadeOut;
+    animation-name: fadeOut;
+ }
 
