--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,7 @@ ul {
   border: 10px solid lightgreen
 }
 
-.corona-dialog .mat-dialog-container {
+.kingsday .mat-dialog-container {
   border-color: var(--text-color-orange !important);
 }
 
