--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 :root {
   --text-color-orange: #d37d1b;
-  --text-color-bright-orange: #ecb26f;
+  --text-color-bright-orange: #fcd19f;
   
   // --header-blue: green;
   --header-blue: #243956;
