--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
   <mat-sidenav-content>
     <app-header></app-header>
     <main>
-      <router-outlet></router-outlet>
+      <div class="router-outlet-container">
+        <router-outlet></router-outlet>
+      </div>
       <app-footer></app-footer>
     </main>
   </mat-sidenav-content>
