--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,30 +1,38 @@
+mat-sidenav-container,
+mat-sidenav-content,
+mat-sidenav {
+    height: 100%;
+    background-color: var(--header-blue);
 
-
-mat-sidenav-container, mat-sidenav-content, mat-sidenav {
-  height: 100%;
 }
 
 mat-sidenav {
-  background-color: var(--header-blue);
+    background-color: var(--header-blue);
 }
 
 mat-sidenav {
-  min-width: 200px;
-  max-width: 300px;
-  padding: 1rem;
+    min-width: 200px;
+    max-width: 300px;
+    padding: 1rem;
 }
 app-header {
-  position: fixed;
-  width: 100vw;
-  z-index: 100;
+    position: fixed;
+    width: 100vw;
+    z-index: 100;
 }
 mat-sidenav-content {
-  // background-color: var(--text-color-orange);
-  background-color: var(--header-blue);
-}
-main {
-  
-  
-  // height: 100%;
+    // background-color: var(--text-color-orange);
+    background-color: var(--header-blue);
+    app-header {
+    }
+    main {
+
+        margin-top: 56px;
+        @media (min-width: 600px) {
+            margin-top: 64px;
+        }
+        .router-outlet-container {
+        }
+    }
 }
 
