--- a/src/app/new-exhibitions/show-exposition/show-exposition.component.html
+++ b/src/app/new-exhibitions/show-exposition/show-exposition.component.html
@@ -1,11 +1,13 @@
 <div class="main-container">
+    <!-- <div class="filler"></div> -->
     <mat-drawer-container class="example-container">
-        <mat-drawer mode="side" [opened]="opened"  (click)="onClose()">
-            <div class="filler"></div>
+        <mat-drawer mode="side" [opened]="opened" (click)="onClose()">
+            <!-- <div class="filler"></div> -->
             <hr>
             <div class="drawer-title">{{exhibition?.title}}</div>
             <ul class="drawer-artist-names">
-                <li fxLayout fxLayoutAlign="end" class="drawer-artist-name" *ngFor="for let artistName of exhibition?.artistNames">
+                <li fxLayout fxLayoutAlign="end" class="drawer-artist-name"
+                    *ngFor="let artistName of exhibition?.artistNames">
                     {{artistName}}
                 </li>
             </ul>
@@ -19,50 +21,95 @@
             </div>
         </mat-drawer>
         <mat-drawer-content>
-            <div class="filler"></div>
+            <!-- <div class="modal animated fadeOut"> -->
+            <div class="modal" [ngClass]="{animated: isRestoreButtons, fadeOut: isRestoreButtons}">
+                <!-- <div [ngClass]="{red: isRestoreButtons}" class="modal"> -->
+                <div
+                    class="left-modal child-modal" (click)="onPrevious()">
+
+                    <!-- <div class="previous-icon">
+                        <mat-icon [inline]="true">arrow_back_ios</mat-icon>
+                    </div> -->
+                </div>
+
+                <div
+                    class="center-modal child-modal"
+
+                    (click)="onShowFullSize(exhibition?.images[activeImageIndex].filePath)">
+                    <!-- <div class="launch-icon">
+                        <mat-icon [inline]="true">launch</mat-icon>
+                    </div> -->
+                </div>
+
+                <div
+                    class="right-modal child-modal"
+                    (click)="onNext()">
+                    <!-- <div class="next-icon">
+                        <mat-icon [inline]="true">arrow_forward_ios</mat-icon>
+                    </div> -->
+                </div>
+
+            </div>
+            <!-- <div class="filler"></div> -->
             <hr>
             <div class="header" fxLayout="column" fxLayoutAlign="space-around" fxLayoutGap=".5rem">
-                <div class="title_info" fxLayout fxLayoutAlign="space-between" fxLayoutGap=".3rem">
+                <div class="title_order-number_info" fxLayout fxLayoutAlign="space-between" fxLayoutGap=".3rem">
                     <div class="title">
                         {{exhibition?.title}}
                     </div>
-                    <button mat-raised-button class="info-button" (click)="onInfo()">
+                    <div
+                        fxLayoutAlign="center center"
+                        *ngIf="exhibition?.images.length > 1"
+                        class="order-number">
+                        {{exhibition?.images[activeImageIndex].orderNumber}}&nbsp;/&nbsp;{{exhibition?.images.length}}
+                    </div>
+                    
+                    <button *ngIf="exhibition?.description" mat-raised-button class="info-button" (click)="onInfo()">
                         <mat-icon class="info">info</mat-icon>
                     </button>
                 </div>
-                <!-- <div class="start-end_info" fxLayout fxLayoutAlign="space-between">
-                    <div class="start-end">
-                        {{exhibition?.startExhibition|date}} - 
-                        {{exhibition?.endExhibition|date}}
-                    </div>
-                </div> -->
-                <!-- {{exhibition?.images.length}} -->
-                <div
+                <!-- <div
                     *ngIf="exhibition?.images.length > 1" 
                     class="navigation" 
                     fxLayout fxLayoutAlign="space-between">
-                    <button class="previous" mat-raised-button (click)="onPrevious()">
-                       
-                        <mat-icon>arrow_back_ios</mat-icon>
-                    </button>
-                    <div
-                        class="orderNumber">
-                        {{exhibition?.images[activeImageIndex].orderNumber}} /
-                        {{exhibition?.images.length}}
-                    </div>
-                    <button class="next"  mat-raised-button (click)="onNext()">
-                       
-                        <mat-icon>arrow_forward_ios</mat-icon>
-                       
-                    </button>
+                </div> -->
+            </div>
+
+            <div *ngIf="!imageIsLoaded" class="spinner-navigation" fxLayout="column" fxLayoutAlign="center center">
+                <mat-spinner class="spinner"></mat-spinner>
+                <div class="navigation" fxLayout fxLayoutAlign="space-around">
+                    <mat-icon>arrow_backward_ios</mat-icon>
+                    <mat-icon>launch</mat-icon>
+                    <mat-icon>arrow_forward_ios</mat-icon>
                 </div>
             </div>
-            <div (click)="onShowFullSize(exhibition?.images[activeImageIndex].filePath)" class="images" fxLayout fxLayoutAlign="center center center">
+            <!-- <div class="test-image">
+                <img [src]="currentImagePath" alt="">
+            </div> -->
+
+            <div
+                (click)="onShowFullSize(exhibition?.images[activeImageIndex].filePath)"
+                class="images"
+                *ngIf="imageIsLoaded"
+                fxLayout fxLayoutAlign="center center center">
                 <figure class="figure">
-                    <img class="image" [src]="exhibition?.images[activeImageIndex].filePath" alt="">
-                    <figcaption fxLayout fxLayoutAlign="end">{{exhibition?.images[activeImageIndex].artistName}}</figcaption>
+                    <img #image class="image" [src]="currentImagePath" alt="">
+                    <figcaption fxLayout fxLayoutAlign="end">{{exhibition?.images[activeImageIndex].artistName}}
+                    </figcaption>
                 </figure>
             </div>
+
+            <!-- <div
+                (click)="onShowFullSize(exhibition?.images[activeImageIndex].filePath)"
+                class="images"
+                fxLayout fxLayoutAlign="center center center">
+                <figure class="figure">
+                    <img class="image" [src]="exhibition?.images[activeImageIndex].filePath" alt="">
+                    <figcaption fxLayout fxLayoutAlign="end">{{exhibition?.images[activeImageIndex].artistName}}
+                    </figcaption>
+                </figure>
+            </div> -->
+
             <!-- <div class="artist-name" fxLayout fxLayoutAlign="end">{{exhibition?.images[activeImageIndex].artistName}}</div> -->
 
         </mat-drawer-content>
