--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -164,13 +164,17 @@ section {
       
       text-align: center;
       .menu-item {
-        border: 1px solid var(--text-color-orange);
+        background-color: var(--text-color-bright-orange);
+        // border: 1px solid var(--text-color-orange);
         font-size: 1.5rem;
+        font-weight: bold;
+        border-radius: .3rem;
+        
         padding: 0.5rem;
         margin: 5px 0;
         text-transform: uppercase;
         display: block;
-        color: var(--text-color-bright-orange)
+        color: var(--header-blue)
 
       }
 
