--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,61 +1,67 @@
-@import './styles/variables';
-@import './styles/mixins';
+@import "./styles/variables";
+@import "./styles/mixins";
 
 * {
-  box-sizing: border-box;
-  letter-spacing: 1.2px;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  font-weight: 400;
+    box-sizing: border-box;
+    letter-spacing: 1.2px;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-weight: 400;
 }
-
 
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  margin: 0;
+    margin: 0;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 ul {
-  list-style: none;
-  padding: 0;
+    list-style: none;
+    padding: 0;
 }
 .panelClass {
-  width: 100vw;
-  max-width: 350px;
-  height: 100vh;
-  
+    width: 100vw;
+    max-width: 350px;
+    height: 100vh;
 }
-.full-size-image .mat-dialog-container{
-  padding: 0;
+.full-size-image .mat-dialog-container {
+    padding: 0;
+}
+
+.inside-outside-dialog .mat-dialog-container {
+    padding: 0;
+    border: 3px solid var(--text-color-orange);
+    
+    // max-width: 400px;
+    // min-width: 310px;
 }
 
 .panelClassFailure {
-  border: 10px solid red
+    border: 10px solid red;
 }
 .panelClassSuccess {
-  border: 10px solid lightgreen
+    border: 10px solid lightgreen;
 }
 
 .kingsday .mat-dialog-container {
-  border-color: var(--text-color-orange !important);
+    border-color: var(--text-color-orange !important);
 }
 
 button {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .dialog-dimensions .mat-dialog-container {
-  width: 100vw !important;
-  max-width: 400px;
-  max-height: 95vh;
-  padding: 0;
-  border: 5px solid var(--text-color-orange);
-  // border-radius: 0px !important;
+    width: 100vw !important;
+    max-width: 400px;
+    max-height: 95vh;
+    padding: 0;
+    border: 5px solid var(--text-color-orange);
+    // border-radius: 0px !important;
 }
